@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,7 +37,7 @@ public class TestPeruCurrencyFormat {
     public static void main(String[] args) {
         final String expected = "S/.1,234.56";
         NumberFormat currencyFmt =
-                NumberFormat.getCurrencyInstance(new Locale("es", "PE"));
+                NumberFormat.getCurrencyInstance(Locale.of("es", "PE"));
         String s = currencyFmt.format(1234.56);
 
         if (!s.equals(expected)) {
