@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,7 +36,7 @@ public class Bug4210525 {
         String country = "US";
         String variant = "socal";
 
-        Locale aLocale = new Locale(language, country, variant);
+        Locale aLocale = Locale.of(language, country, variant);
 
         String localeVariant = aLocale.getVariant();
         if (localeVariant.equals(variant)) {
