@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,9 +32,9 @@ import java.util.spi.*;
 import com.foobar.Utils;
 
 public class TimeZoneNameProviderImpl extends TimeZoneNameProvider {
-    static Locale[] avail = {new Locale("ja", "JP", "osaka"),
-                        new Locale("ja", "JP", "kyoto"),
-                        new Locale("xx"),
+    static Locale[] avail = {Locale.of("ja", "JP", "osaka"),
+                        Locale.of("ja", "JP", "kyoto"),
+                        Locale.of("xx"),
                         Locale.JAPAN};
 
     static String[][] zoneOsaka = {
